<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/me_root_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_20">

        <LinearLayout
            android:id="@+id/collect_layout_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginEnd="@dimen/dp_28"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:src="@drawable/temp_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_20"
                android:text="@string/go_to_login"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_4"
                android:src="@drawable/ic_arrow_right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:background="@drawable/shape_white_bg_large"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/collect_tv_local_song"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/local_music"
                android:gravity="center"
                android:drawablePadding="@dimen/dp_4"
                android:textSize="12.5sp"
                app:drawableTopCompat="@drawable/temp_icon" />
            <TextView
                android:id="@+id/collect_tv_recent_read"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recent_read"
                android:textSize="12.5sp"
                android:gravity="center"
                android:drawablePadding="@dimen/dp_4"
                app:drawableTopCompat="@drawable/temp_icon" />
            <TextView
                android:id="@+id/collect_tv_recent_listen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12.5sp"
                android:text="@string/recent_play"
                android:drawablePadding="@dimen/dp_4"
                app:drawableTopCompat="@drawable/temp_icon" />
            <TextView
                android:id="@+id/collect_tv_downloaded"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12.5sp"
                android:text="@string/has_downloaded"
                android:drawablePadding="@dimen/dp_4"
                app:drawableTopCompat="@drawable/temp_icon" />

        </LinearLayout>
    <FrameLayout
        android:id="@+id/collect_fl_loved_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:padding="@dimen/dp_15"
        android:background="@drawable/shape_white_bg_large"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="@dimen/dp_52"
            android:layout_height="@dimen/dp_52"
            android:background="@drawable/shape_blue_bg">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/love_blue" />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_50p"
            android:textSize="15sp"
            android:layout_marginStart="@dimen/dp_65"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/my_love" />

        <TextView
            android:id="@+id/collect_tv_loved_songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0首"
            android:textSize="14sp"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_65" />

    </FrameLayout>


        <FrameLayout
            android:id="@+id/collect_fl_loved_poetry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/shape_white_bg_large"
            android:orientation="horizontal"
            android:padding="@dimen/dp_15">

            <FrameLayout
                android:layout_width="@dimen/dp_52"
                android:layout_height="@dimen/dp_52"
                android:background="@drawable/shape_blue_bg">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/love_blue" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_65"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/poetry_love"
                android:textColor="@color/black_50p"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_65"
                android:layout_marginTop="@dimen/dp_30"
                android:text="0首"
                android:textSize="14sp" />

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_34"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_16">
            <TextView
                android:id="@+id/song_list_tv_create_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_song_list"
                android:textSize="17sp"
                android:textColor="@color/black_33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                android:text="3个"
                app:layout_constraintStart_toEndOf="@id/song_list_tv_create_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/dp_10" />
            <ImageView
                android:id="@+id/collect_iv_create_new_song_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="@dimen/dp_20"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/round_add" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <wind.widget.jrecyclerview.JRecycleView
            android:id="@+id/collect_rv_create_new_song_list2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/shape_white_bg_large"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_10"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/poetry_note"
            android:textColor="@color/black_33"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="@dimen/dp_16"
            android:background="@drawable/shape_white_bg_large">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:text="@string/poetry_directory" />

                <ImageView
                    android:id="@+id/collect_iv_create_new_poetry_list"
                    android:layout_width="@dimen/dp_18"
                    android:layout_height="@dimen/dp_18"
                    android:src="@drawable/round_add"
                    android:layout_gravity="end" />
            </FrameLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collect_song_list"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_16"
            android:textSize="17sp"
            android:textColor="@color/black_33" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="@dimen/dp_16"
            android:background="@drawable/shape_white_bg_large">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGray"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:text="@string/no_collect_song_list" />

        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>