<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/temp_login_bg"
    app:ignore="NamespaceTypo">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_40p" />

    <ImageView
        android:id="@+id/login_iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left_white"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_28"
        android:layout_marginEnd="@dimen/dp_28"
        android:layout_marginTop="@dimen/dp_76">

        <wind.widget.edittext.SearchEditText
            android:id="@+id/login_et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_34"
            android:background="@android:color/transparent"
            android:paddingStart="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_8"
            android:hint="@string/input_phone"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="11"
            android:textColor="@color/white"
            android:singleLine="true"
            android:textSize="@dimen/sp_16"
            android:textColorHint="@color/white_50p"
            apps:scaleSize="0.4" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGrayNormal"
            android:layout_marginBottom="@dimen/dp_20"/>
        <wind.widget.edittext.SearchEditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_34"
            android:background="@android:color/transparent"
            android:paddingStart="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_8"
            android:hint="@string/input_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="12"
            android:textColor="@color/white"
            android:textColorHint="@color/white_50p"
            android:singleLine="true"
            android:textSize="@dimen/sp_16"
            apps:scaleSize="0.4" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGrayNormal" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_4">
            <TextView
                android:id="@+id/login_tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:layout_gravity="end"
                android:text="@string/forget_password"
                />
        </FrameLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:textAllCaps="false"
            android:text="@string/to_login"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:enabled="false"
            android:textSize="@dimen/sp_17"
            android:background="@drawable/selector_login_btn"
            android:textColor="@color/white_50p" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30">
            <ImageView
                android:id="@+id/login_iv_qq"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:src="@drawable/qq"
                android:layout_marginEnd="@dimen/dp_24"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:id="@+id/login_tv_wechat"
                android:layout_width="@dimen/dp_26"
                android:layout_height="@dimen/dp_26"
                android:src="@drawable/wechat"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_gravity="center_horizontal"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_is_register"
            android:textColor="@color/white_50p"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:textSize="14sp" />
    </LinearLayout>



</FrameLayout>